# google-drive-agent

./: .gitignore  README.md  config.py  main.py  pyproject.toml  start.sh
backend/: app.py  config.py
backend/agents/: agent.py  prompts.py  tools.py
backend/google_drive/: drive.py  search.py
backend/helpers/: helper.py
backend/schemas/: schema.py
frontend/: app.py
