[project]
name = "google-drive-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "langchain[google-genai]>=1.3.0",
    "pydantic>=2.13.4",
]
